# luismtzz

./: .gitignore  setup.py
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 293ea0e6c696_create_profile_table.py  51b04253bfd7_create_steam_user_and_app_tables.py  f22fa287ea77_create_steam_user_and_app_tables.py
backend/app/: main.py
backend/app/api/v1/endpoints/: profile.py  steam.py
backend/app/db/: base.py  session.py
backend/app/models/: profile.py  steam.py
backend/app/schemas/: profile.py  steam.py
backend/app/services/: profile_service.py  steam_service.py
frontend/: package-lock.json  package.json  repomix-output.txt  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: TopLeftMenubar.tsx  TopRightMenubar.tsx
frontend/src/pages/home/: Home.tsx
frontend/src/router/: index.tsx
